--- a/src/main/resources/templates/manage-order.html
+++ b/src/main/resources/templates/manage-order.html
@@ -25,12 +25,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item ">
                     <a class="nav-link" href="/">OrderPage
                         
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="#">ManageOrder</a>
                     <span class="sr-only">(current)</span>
                 </li>
@@ -75,7 +75,7 @@
       <th class="th-sm">Order date
 
       </th>
-      <th class="th-sm">Salary
+      <th class="th-sm">Price
 
       </th>
     </tr>
