--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-        <a class="navbar-brand" href="/">Demo - Yêu cầu chỉnh sửa ảnh</a>
+        <a class="navbar-brand" href="/">Demo - Yêu cầu chỉnh sửa ảnh - Page for Customer</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">OrderPage
+                    <a class="nav-link" href="/home">OrderPage
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
@@ -33,6 +33,10 @@
                 
                 <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact</a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
                 </li>
             </ul>
         </div>
@@ -64,7 +68,7 @@
 				    </div>
 				    <div class="form-group col-md-6">
 				      <label for="inputPassword4">Phone</label>
-				      <input type="text" class="form-control" id="inputPassword4" placeholder="Password">
+				      <input type="text" class="form-control" id="inputPassword4" placeholder="Phonenumber">
 				    </div>
 				  </div>
 				  <div class="form-group">
